--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="back"><![CDATA[<-]]></string>
     <string name="new_event">New Event</string>
     <string name="month_year">MONTH + YEAR</string>
+    <string name="actual_day">ACTUAL DAY</string>
 </resources>
