Improve interaction between user and event - #4 : Added delete action on event. It's now possible to  update an event.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="notification_mock">notif1\nnotif2\nnotif3</string>
     <string name="event_description_mock">desc</string>
     <string name="hour_mocker">hour_mocker</string>
+    <string name="delete">Delete</string>
+    <string name="duplicate">Duplicate</string>
+    <string name="share">Share</string>
 </resources>
