Create an home menu - #7 : Created an home menu with 4 cards, so the user will be able to navigate faster in the app in the future.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="delete">Delete</string>
     <string name="duplicate">Duplicate</string>
     <string name="share">Share</string>
+    <string name="ultra_scheduler">Ultra Scheduler</string>
+    <string name="calendar_view">Calendar View</string>
+    <string name="todo_tasks">Todo Tasks</string>
+    <string name="planify_activities">Planify Activities</string>
+    <string name="coming_soon">Coming SOON</string>
 </resources>
