--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="todo_tasks">Todo Tasks</string>
     <string name="planify_activities">Planify Activities</string>
     <string name="coming_soon">Coming SOON</string>
+    <string name="error">ERROR</string>
 </resources>
